// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-alert-beta #render should render component as expected (1) 1`] = `
<gux-alert-beta
  accent="info"
>
  Note: This is an information alert.
</gux-alert-beta>
`;

exports[`gux-alert-beta #render should render component as expected (2) 1`] = `
<gux-alert-beta
  accent="success"
>
  Note: This is a success alert.
</gux-alert-beta>
`;

exports[`gux-alert-beta #render should render component as expected (3) 1`] = `
<gux-alert-beta
  accent="warning-octogon"
>
  Note: This is a warning alert.
</gux-alert-beta>
`;

exports[`gux-alert-beta #render should render component as expected (4) 1`] = `
<gux-alert-beta
  accent="warning-triangle"
>
  Note: This is a warning alert.
</gux-alert-beta>
`;
